Add System.Text.Json to project

--- a/JRRagonChessEngine.csproj
+++ b/JRRagonChessEngine.csproj
@@ -13,4 +13,8 @@
     <None Remove="bin\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="6.0.9" />
+  </ItemGroup>
+
 </Project>
